--- a/karate-test/pom.xml
+++ b/karate-test/pom.xml
@@ -6,6 +6,13 @@
 	<artifactId>karate-test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<karate.version>1.1.0</karate.version>
+	</properties>
+	
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/com.intuit.karate/karate-core -->
 		<dependency>
@@ -27,8 +34,16 @@
 			<version>1.2.0.RC4</version>
 			<scope>test</scope>
 		</dependency>
-
-
-
 	</dependencies>
+	
+	<build>
+		<testResources>
+			<testResource>
+				<directory>src/test/java</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</testResource>
+		</testResources>
+	</build>
 </project>
